[project]
name = "comfyui-pixtralllamavision"
description = "For loading and running Pixtral and Llama 3.2 Vision models"
version = "2.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/SeanScripts/ComfyUI-PixtralLlamaVision"
#  Used by Comfy Registry https://comfyregistry.org 

[tool.comfy]
PublisherId = "seanscripts"
DisplayName = "ComfyUI-PixtralLlamaVision"
Icon = ""
