[project]
name = "comfyui-pixtralllamavision"
description = "For loading and running Pixtral, Llama 3.2 Vision, and Molmo models. Put models in the models/LLM folder."
version = "2.2.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/SeanScripts/ComfyUI-PixtralLlamaVision"
#  Used by Comfy Registry https://comfyregistry.org 

[tool.comfy]
PublisherId = "seanscripts"
DisplayName = "ComfyUI-PixtralLlamaVision"
Icon = ""
