[project]
name = "comfyui-pixtralllamamolmovision"
description = "For loading and running Pixtral, Llama 3.2 Vision, and Molmo models. Put models in the models/LLM folder."
version = "3.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/SeanScripts/ComfyUI-PixtralLlamaMolmoVision"
#  Used by Comfy Registry https://comfyregistry.org 

[tool.comfy]
PublisherId = "seanscripts"
DisplayName = "ComfyUI-PixtralLlamaMolmoVision"
Icon = ""
